@@ -35,8 +35,8 @@ Copyright (c) 1999-2006 Ethan Galstad<br>
 
 <P>
 <div align=center>
-<div align=center CLASS="version">Version 3.0-prealpha-02232006</div>
-<div align=center CLASS="releaseDate">February 23, 2006</div>
+<div align=center CLASS="version">Version 3.0-prealpha-02272006</div>
+<div align=center CLASS="releaseDate">February 27, 2006</div>
 </div>
 </P>
 
