@@ -1,5 +1,5 @@
 %define name nagios
-%define version 3.0-prealpha-02232006
+%define version 3.0-prealpha-02272006
 %define release 1.fc4.test
 %define nsusr nagios
 %define nsgrp nagios
